--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "npm run dev"
     },
     "devDependencies": {
         "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "github:laravel/vite-plugin",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.13.7"
     }
 }
